[package]
name = "execution-beacon"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "execution_beacon"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
solana-program = "2.3.0"
anchor-lang = { version = "0.32.1", features = ["event-cpi"] }
